@@ -18,46 +18,65 @@
  * along with GetData; if not, write to the Free Software Foundation, Inc.,
  * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
-/* Truncating a read-only dirfile should fail cleanly */
+/* Attempt to read LINCOM */
 #include "test.h"
 
 #include <stdlib.h>
-#include <errno.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <string.h>
+#include <errno.h>
 
 int main(void)
 {
   const char *filedir = "dirfile";
   const char *format = "dirfile/format";
   const char *data = "dirfile/data";
-  int error, r = 0;
+  const char *cata = "dirfile/cata";
+  const char *format_data = "lincom LINCOM 2 data 2 3 cata 1 0\n"
+    "data RAW UINT8 2\n"
+    "cata RAW UINT8 3\n";
+  unsigned char c[10];
+  unsigned char data_data[256];
+  int fd, n, error, r = 0;
   DIRFILE *D;
+
+  memset(c, 0, 10);
 
   rmdirfile();
   mkdir(filedir, 0777);
-  close(open(format, O_CREAT | O_EXCL | O_WRONLY, 0666));
-  close(open(data, O_CREAT | O_EXCL | O_WRONLY, 0666));
-  chmod(filedir, 0555);
 
-  /* ensure filesystem honours read-onlyness */
-  if (!unlink(data) || errno != EACCES) {
-    unlink(format);
-    rmdir(filedir);
-    return 77;
-  }
+  for (fd = 0; fd < 256; ++fd)
+    data_data[fd] = (unsigned char)fd;
 
-  D = gd_open(filedir, GD_RDWR | GD_TRUNC);
+  fd = open(format, O_CREAT | O_EXCL | O_WRONLY, 0666);
+  write(fd, format_data, strlen(format_data));
+  close(fd);
+
+  fd = open(data, O_CREAT | O_EXCL | O_WRONLY | O_BINARY, 0666);
+  write(fd, data_data, 256);
+  close(fd);
+
+  fd = open(cata, O_CREAT | O_EXCL | O_WRONLY | O_BINARY, 0666);
+  write(fd, data_data, 256);
+  close(fd);
+
+  D = gd_open(filedir, GD_RDONLY | GD_VERBOSE);
+  n = gd_getdata(D, "lincom", 5, 0, 5, 0, GD_UINT8, &c);
   error = gd_error(D);
-  gd_discard(D);
 
-  chmod(filedir, 0777);
+  gd_close(D);
+
+  unlink(cata);
   unlink(data);
   unlink(format);
   rmdir(filedir);
 
-  CHECKI(error, GD_E_TRUNC);
+  CHECKI(error, 0);
+  CHECKI(n, 10);
+  for (n = 0; n < 10; ++n)
+    CHECKUi(n, c[n], 38 + n * 7 / 2);
+
   return r;
 }
